--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <a href = "https://www.google.com" target="_blank">Google</a>
 
     <h3>Image tag</h3>
-    <img src = "img.jpg" alt="Random Image">
+    <img src = "./img.png" alt="Random Image">
 
 </body>
 </html>
